--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="emoji">💏👨‍👩‍👧‍👦💘</div>
 
     <!-- Imagem -->
-    <img class="Imagem" src="https://postimg.cc/2qDHjLsY" alt="Imagem do Amor">
+    <img class="Imagem" src="casal.png" alt="Imagem do Amor">
 
     <div class="text-block">
       <p>
